pastac/src/parser.output
   0  $accept : %entry% $end

   1  program : program_declaration global_declaration_list compound_statement DOT
   2          | program_declaration compound_statement DOT

   3  global_declaration_list : global_declaration global_declaration_list
   4                          | global_declaration

   5  global_declaration : variable_declaration
   6                     | procedure_definition
   7                     | function_definition
   8                     | type_definition

   9  program_declaration : PROGRAM ID SCOLON

  10  simple_type : INTEGER
  11              | REAL
  12              | STRING
  13              | CHARACTER
  14              | BOOLEAN

  15  array_item_type : ID
  16                  | simple_type
  17                  | reference_type

  18  any_type : ID
  19           | array_type
  20           | simple_type
  21           | reference_type

  22  array_type : ARRAY LBRA range_list RBRA OF array_item_type
  23             | ARRAY OF array_item_type

  24  range_list : range COMMA range_list
  25             | range

  26  range : range_value RANGE range_value
  27        |

  28  range_value : ICONST
  29              | SUB ICONST

  30  variable_declaration : VAR var_declrs_or_inits

  31  var_declrs_or_inits : declr_or_init SCOLON var_declrs_or_inits
  32                      | declr_or_init SCOLON

  33  declr_or_init : var_declr
  34                | var_init

  35  var_declr : id_list COLON any_type

  36  var_init : id_list COLON simple_type EQUAL expression
  37           | id_list COLON ID EQUAL ID

  38  procedure_definition : PROCEDURE ID LPAR parameter_list RPAR SCOLON local_var_declrs compound_statement SCOLON

  39  function_definition : FUNCTION ID LPAR parameter_list RPAR COLON any_type SCOLON local_var_declrs compound_statement SCOLON

  40  local_var_declrs : variable_declaration
  41                   |

  42  parameter_list : var_declr_list SCOLON var_init_list
  43                 | var_declr_list
  44                 | var_init_list
  45                 |

  46  var_declr_list : var_declr_list SCOLON var_declr
  47                 | var_declr

  48  var_init_list : var_init_list SCOLON var_init
  49                | var_init

  50  type_definition : TYPE type_definition_list

  51  type_definition_list : ID EQUAL type_body SCOLON type_definition_list
  52                       | ID EQUAL type_body SCOLON

  53  type_body : any_type
  54            | record_body
  55            | enumerate_body
  56            | exception_body

  57  exception_body : EXCEPTION
  58                 | EXCEPTION fixed_field_list END

  59  record_body : RECORD fixed_field_list END
  60              | RECORD fixed_field_list variant_field END
  61              | RECORD variant_field END

  62  fixed_field_list : fixed_field_list fixed_field
  63                   | fixed_field

  64  fixed_field : id_list COLON any_type SCOLON

  65  variant_field : CASE ID COLON ordinal_type OF variant_case_part variant_else_part
  66                | CASE ID COLON ordinal_type OF variant_case_part

  67  variant_case_part : variant_case
  68                    | variant_case variant_case_part

  69  variant_case : literal_or_enum_list COLON LPAR fixed_field_list RPAR

  70  variant_else_part : ELSE fixed_field_list

  71  enumerate_body : ENUMERATE id_list END

  72  reference_type : REF any_type

  73  ordinal_type : INTEGER
  74               | STRING
  75               | CHARACTER
  76               | BOOLEAN
  77               | REAL
  78               | ID

  79  statement : stmt_m
  80            | stmt_u

  81  stmt_m : IF expression THEN stmt_m ELSE stmt_m
  82         | CASE expression OF case_part ELSE stmt_m
  83         | expression ASG expression
  84         | WHILE expression DO stmt_m
  85         | BEGIN statement_list END
  86         | FOR ID ASG expression TO expression DO stmt_m
  87         | FOR ID ASG expression DOWNTO expression DO stmt_m
  88         | REPEAT stmt_m UNTIL expression
  89         | TRY stmt_m EXCEPT exception_part stmt_m
  90         | TRY stmt_m FINALLY stmt_m
  91         | TRY stmt_m EXCEPT exception_part DO stmt_m FINALLY stmt_m
  92         | RAISE ID LPAR expression_list RPAR
  93         | RAISE ID
  94         | WRITE expression_list
  95         | READ expression_list
  96         | DEC expression
  97         | INC expression
  98         | BREAK
  99         | CONTINUE
 100         | ID LPAR expression_list RPAR
 101         |

 102  stmt_u : IF expression THEN statement
 103         | IF expression THEN stmt_m ELSE stmt_u
 104         | WHILE expression DO stmt_u
 105         | FOR ID ASG expression TO expression DO stmt_u
 106         | FOR ID ASG expression DOWNTO expression DO stmt_u
 107         | CASE expression OF case_part
 108         | CASE expression OF case_part ELSE stmt_u
 109         | REPEAT stmt_u UNTIL expression
 110         | TRY stmt_u EXCEPT exception_part DO stmt_u
 111         | TRY stmt_u FINALLY stmt_u END
 112         | TRY stmt_u EXCEPT exception_part stmt_u FINALLY stmt_u

 113  case_part : literal_or_enum_list COLON statement SCOLON case_part
 114            | literal_or_enum_list COLON statement SCOLON

 115  literal_or_enum : literal
 116                  | ID

 117  literal : ICONST
 118          | RCONST
 119          | BCONST
 120          | SCONST
 121          | CCONST

 122  literal_or_enum_list : literal_or_enum literal_or_enum_list
 123                       | literal_or_enum

 124  exception_part : id_list
 125                 | id_list AS ID

 126  id_list : id_list COMMA ID
 127          | ID

 128  compound_statement : BEGIN statement_list END

 129  statement_list : statement
 130                 | statement_list SCOLON statement

 131  expression : access
 132             | value

 133  value : value_not_access
 134        | expression GT expression
 135        | expression LT expression
 136        | expression EQUAL expression
 137        | expression GTEQ expression
 138        | expression LTEQ expression
 139        | expression NOTEQ expression
 140        | expression ADD expression
 141        | expression SUB expression
 142        | expression OR expression
 143        | expression MUL expression
 144        | expression DIV expression
 145        | expression MOD expression
 146        | expression AND expression
 147        | NOT expression
 148        | literal
 149        | NIL
 150        | ID LPAR expression_list RPAR

 151  value_not_access : LPAR value_not_access RPAR
 152                   | GETREF access

 153  access : ID
 154         | LPAR access RPAR
 155         | DEREF access
 156         | DEREF value_not_access
 157         | access LBRA expression_list RBRA
 158         | access DOT ID

 159  expression_list : expression
 160                  | expression COMMA expression_list
 161                  |

 162  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (162)

	PROGRAM  shift 3
	.  error

	program  goto 4
	program_declaration  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program_declaration : PROGRAM . ID SCOLON  (9)

	ID  shift 6
	.  error


state 4
	%entry% : '\001' program .  (162)

	.  reduce 162


state 5
	program : program_declaration . global_declaration_list compound_statement DOT  (1)
	program : program_declaration . compound_statement DOT  (2)

	FUNCTION  shift 7
	PROCEDURE  shift 8
	BEGIN  shift 9
	VAR  shift 10
	TYPE  shift 11
	.  error

	global_declaration_list  goto 12
	compound_statement  goto 13
	global_declaration  goto 14
	variable_declaration  goto 15
	procedure_definition  goto 16
	function_definition  goto 17
	type_definition  goto 18


state 6
	program_declaration : PROGRAM ID . SCOLON  (9)

	SCOLON  shift 19
	.  error


state 7
	function_definition : FUNCTION . ID LPAR parameter_list RPAR COLON any_type SCOLON local_var_declrs compound_statement SCOLON  (39)

	ID  shift 20
	.  error


state 8
	procedure_definition : PROCEDURE . ID LPAR parameter_list RPAR SCOLON local_var_declrs compound_statement SCOLON  (38)

	ID  shift 21
	.  error


state 9
	compound_statement : BEGIN . statement_list END  (128)
	stmt_m : .  (101)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 27
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	BEGIN  shift 31
	FOR  shift 32
	WHILE  shift 33
	REPEAT  shift 34
	IF  shift 35
	INC  shift 36
	DEC  shift 37
	WRITE  shift 38
	READ  shift 39
	CASE  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	TRY  shift 43
	NIL  shift 44
	RAISE  shift 45
	NOT  shift 46
	SCOLON  reduce 101
	END  reduce 101

	expression  goto 47
	statement  goto 48
	stmt_m  goto 49
	stmt_u  goto 50
	statement_list  goto 51
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 10
	variable_declaration : VAR . var_declrs_or_inits  (30)

	ID  shift 56
	.  error

	var_declrs_or_inits  goto 57
	declr_or_init  goto 58
	var_declr  goto 59
	var_init  goto 60
	id_list  goto 61


state 11
	type_definition : TYPE . type_definition_list  (50)

	ID  shift 62
	.  error

	type_definition_list  goto 63


state 12
	program : program_declaration global_declaration_list . compound_statement DOT  (1)

	BEGIN  shift 9
	.  error

	compound_statement  goto 64


state 13
	program : program_declaration compound_statement . DOT  (2)

	DOT  shift 65
	.  error


state 14
	global_declaration_list : global_declaration . global_declaration_list  (3)
	global_declaration_list : global_declaration .  (4)

	FUNCTION  shift 7
	PROCEDURE  shift 8
	VAR  shift 10
	TYPE  shift 11
	BEGIN  reduce 4

	global_declaration_list  goto 66
	global_declaration  goto 14
	variable_declaration  goto 15
	procedure_definition  goto 16
	function_definition  goto 17
	type_definition  goto 18


state 15
	global_declaration : variable_declaration .  (5)

	.  reduce 5


state 16
	global_declaration : procedure_definition .  (6)

	.  reduce 6


state 17
	global_declaration : function_definition .  (7)

	.  reduce 7


state 18
	global_declaration : type_definition .  (8)

	.  reduce 8


state 19
	program_declaration : PROGRAM ID SCOLON .  (9)

	.  reduce 9


state 20
	function_definition : FUNCTION ID . LPAR parameter_list RPAR COLON any_type SCOLON local_var_declrs compound_statement SCOLON  (39)

	LPAR  shift 67
	.  error


state 21
	procedure_definition : PROCEDURE ID . LPAR parameter_list RPAR SCOLON local_var_declrs compound_statement SCOLON  (38)

	LPAR  shift 68
	.  error


state 22
	literal : ICONST .  (117)

	.  reduce 117


state 23
	literal : RCONST .  (118)

	.  reduce 118


state 24
	literal : BCONST .  (119)

	.  reduce 119


state 25
	literal : CCONST .  (121)

	.  reduce 121


state 26
	literal : SCONST .  (120)

	.  reduce 120


state 27
	stmt_m : ID . LPAR expression_list RPAR  (100)
	value : ID . LPAR expression_list RPAR  (150)
	access : ID .  (153)

	LPAR  shift 69
	ADD  reduce 153
	SUB  reduce 153
	MUL  reduce 153
	DIV  reduce 153
	MOD  reduce 153
	ASG  reduce 153
	LBRA  reduce 153
	GT  reduce 153
	LT  reduce 153
	EQUAL  reduce 153
	NOTEQ  reduce 153
	GTEQ  reduce 153
	LTEQ  reduce 153
	DOT  reduce 153
	OR  reduce 153
	AND  reduce 153


state 28
	value_not_access : LPAR . value_not_access RPAR  (151)
	access : LPAR . access RPAR  (154)

	ID  shift 70
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	.  error

	access  goto 71
	value_not_access  goto 72


state 29
	value_not_access : GETREF . access  (152)

	ID  shift 70
	LPAR  shift 73
	DEREF  shift 30
	.  error

	access  goto 74


state 30
	access : DEREF . access  (155)
	access : DEREF . value_not_access  (156)

	ID  shift 70
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	.  error

	access  goto 75
	value_not_access  goto 76


state 31
	stmt_m : BEGIN . statement_list END  (85)
	stmt_m : .  (101)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 27
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	BEGIN  shift 31
	FOR  shift 32
	WHILE  shift 33
	REPEAT  shift 34
	IF  shift 35
	INC  shift 36
	DEC  shift 37
	WRITE  shift 38
	READ  shift 39
	CASE  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	TRY  shift 43
	NIL  shift 44
	RAISE  shift 45
	NOT  shift 46
	SCOLON  reduce 101
	END  reduce 101

	expression  goto 47
	statement  goto 48
	stmt_m  goto 49
	stmt_u  goto 50
	statement_list  goto 77
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 32
	stmt_m : FOR . ID ASG expression TO expression DO stmt_m  (86)
	stmt_m : FOR . ID ASG expression DOWNTO expression DO stmt_m  (87)
	stmt_u : FOR . ID ASG expression TO expression DO stmt_u  (105)
	stmt_u : FOR . ID ASG expression DOWNTO expression DO stmt_u  (106)

	ID  shift 78
	.  error


state 33
	stmt_m : WHILE . expression DO stmt_m  (84)
	stmt_u : WHILE . expression DO stmt_u  (104)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 79
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 80
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 34
	stmt_m : REPEAT . stmt_m UNTIL expression  (88)
	stmt_u : REPEAT . stmt_u UNTIL expression  (109)
	stmt_m : .  (101)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 27
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	BEGIN  shift 31
	FOR  shift 32
	WHILE  shift 33
	REPEAT  shift 34
	IF  shift 35
	INC  shift 36
	DEC  shift 37
	WRITE  shift 38
	READ  shift 39
	CASE  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	TRY  shift 43
	NIL  shift 44
	RAISE  shift 45
	NOT  shift 46
	UNTIL  reduce 101

	expression  goto 47
	stmt_m  goto 81
	stmt_u  goto 82
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 35
	stmt_m : IF . expression THEN stmt_m ELSE stmt_m  (81)
	stmt_u : IF . expression THEN statement  (102)
	stmt_u : IF . expression THEN stmt_m ELSE stmt_u  (103)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 79
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 83
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 36
	stmt_m : INC . expression  (97)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 79
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 84
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 37
	stmt_m : DEC . expression  (96)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 79
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 85
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 38
	stmt_m : WRITE . expression_list  (94)
	expression_list : .  (161)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 79
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	SCOLON  reduce 161
	END  reduce 161
	UNTIL  reduce 161
	ELSE  reduce 161
	EXCEPT  reduce 161
	FINALLY  reduce 161

	expression  goto 86
	expression_list  goto 87
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 39
	stmt_m : READ . expression_list  (95)
	expression_list : .  (161)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 79
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	SCOLON  reduce 161
	END  reduce 161
	UNTIL  reduce 161
	ELSE  reduce 161
	EXCEPT  reduce 161
	FINALLY  reduce 161

	expression  goto 86
	expression_list  goto 88
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 40
	stmt_m : CASE . expression OF case_part ELSE stmt_m  (82)
	stmt_u : CASE . expression OF case_part  (107)
	stmt_u : CASE . expression OF case_part ELSE stmt_u  (108)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 79
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 89
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 41
	stmt_m : BREAK .  (98)

	.  reduce 98


state 42
	stmt_m : CONTINUE .  (99)

	.  reduce 99


state 43
	stmt_m : TRY . stmt_m EXCEPT exception_part stmt_m  (89)
	stmt_m : TRY . stmt_m FINALLY stmt_m  (90)
	stmt_m : TRY . stmt_m EXCEPT exception_part DO stmt_m FINALLY stmt_m  (91)
	stmt_u : TRY . stmt_u EXCEPT exception_part DO stmt_u  (110)
	stmt_u : TRY . stmt_u FINALLY stmt_u END  (111)
	stmt_u : TRY . stmt_u EXCEPT exception_part stmt_u FINALLY stmt_u  (112)
	stmt_m : .  (101)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 27
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	BEGIN  shift 31
	FOR  shift 32
	WHILE  shift 33
	REPEAT  shift 34
	IF  shift 35
	INC  shift 36
	DEC  shift 37
	WRITE  shift 38
	READ  shift 39
	CASE  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	TRY  shift 43
	NIL  shift 44
	RAISE  shift 45
	NOT  shift 46
	EXCEPT  reduce 101
	FINALLY  reduce 101

	expression  goto 47
	stmt_m  goto 90
	stmt_u  goto 91
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 44
	value : NIL .  (149)

	.  reduce 149


state 45
	stmt_m : RAISE . ID LPAR expression_list RPAR  (92)
	stmt_m : RAISE . ID  (93)

	ID  shift 92
	.  error


state 46
	value : NOT . expression  (147)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 79
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 93
	literal  goto 52
	access  goto 53
	value  goto 54
	value_not_access  goto 55


state 47
	stmt_m : expression . ASG expression  (83)
	value : expression . GT expression  (134)
	value : expression . LT expression  (135)
	value : expression . EQUAL expression  (136)
	value : expression . GTEQ expression  (137)
	value : expression . LTEQ expression  (138)
	value : expression . NOTEQ expression  (139)
	value : expression . ADD expression  (140)
	value : expression . SUB expression  (141)
	value : expression . OR expression  (142)
	value : expression . MUL expression  (143)
	value : expression . DIV expression  (144)
	value : expression . MOD expression  (145)
	value : expression . AND expression  (146)

	ADD  shift 94
	SUB  shift 95
	MUL  shift 96
	DIV  shift 97
	MOD  shift 98
	ASG  shift 99
	GT  shift 100
	LT  shift 101
	EQUAL  shift 102
	NOTEQ  shift 103
	GTEQ  shift 104
	LTEQ  shift 105
	OR  shift 106
	AND  shift 107
	.  error


state 48
	statement_list : statement .  (129)

	.  reduce 129


state 49
	statement : stmt_m .  (79)

	.  reduce 79


state 50
	statement : stmt_u .  (80)

	.  reduce 80


state 51
	compound_statement : BEGIN statement_list . END  (128)
	statement_list : statement_list . SCOLON statement  (130)

	SCOLON  shift 108
	END  shift 109
	.  error


state 52
	value : literal .  (148)

	.  reduce 148


state 53
	expression : access .  (131)
	access : access . LBRA expression_list RBRA  (157)
	access : access . DOT ID  (158)

	LBRA  shift 110
	DOT  shift 111
	ADD  reduce 131
	SUB  reduce 131
	MUL  reduce 131
	DIV  reduce 131
	MOD  reduce 131
	ASG  reduce 131
	RPAR  reduce 131
	RBRA  reduce 131
	GT  reduce 131
	LT  reduce 131
	EQUAL  reduce 131
	NOTEQ  reduce 131
	GTEQ  reduce 131
	LTEQ  reduce 131
	SCOLON  reduce 131
	COMMA  reduce 131
	END  reduce 131
	THEN  reduce 131
	UNTIL  reduce 131
	ELSE  reduce 131
	DO  reduce 131
	TO  reduce 131
	DOWNTO  reduce 131
	OF  reduce 131
	EXCEPT  reduce 131
	FINALLY  reduce 131
	OR  reduce 131
	AND  reduce 131


state 54
	expression : value .  (132)

	.  reduce 132


state 55
	value : value_not_access .  (133)

	.  reduce 133


state 56
	id_list : ID .  (127)

	.  reduce 127


state 57
	variable_declaration : VAR var_declrs_or_inits .  (30)

	.  reduce 30


state 58
	var_declrs_or_inits : declr_or_init . SCOLON var_declrs_or_inits  (31)
	var_declrs_or_inits : declr_or_init . SCOLON  (32)

	SCOLON  shift 112
	.  error


state 59
	declr_or_init : var_declr .  (33)

	.  reduce 33


state 60
	declr_or_init : var_init .  (34)

	.  reduce 34


state 61
	var_declr : id_list . COLON any_type  (35)
	var_init : id_list . COLON simple_type EQUAL expression  (36)
	var_init : id_list . COLON ID EQUAL ID  (37)
	id_list : id_list . COMMA ID  (126)

	COLON  shift 113
	COMMA  shift 114
	.  error


state 62
	type_definition_list : ID . EQUAL type_body SCOLON type_definition_list  (51)
	type_definition_list : ID . EQUAL type_body SCOLON  (52)

	EQUAL  shift 115
	.  error


state 63
	type_definition : TYPE type_definition_list .  (50)

	.  reduce 50


state 64
	program : program_declaration global_declaration_list compound_statement . DOT  (1)

	DOT  shift 116
	.  error


state 65
	program : program_declaration compound_statement DOT .  (2)

	.  reduce 2


state 66
	global_declaration_list : global_declaration global_declaration_list .  (3)

	.  reduce 3


state 67
	function_definition : FUNCTION ID LPAR . parameter_list RPAR COLON any_type SCOLON local_var_declrs compound_statement SCOLON  (39)
	parameter_list : .  (45)

	ID  shift 56
	RPAR  reduce 45

	var_declr  goto 117
	var_init  goto 118
	id_list  goto 61
	parameter_list  goto 119
	var_declr_list  goto 120
	var_init_list  goto 121


state 68
	procedure_definition : PROCEDURE ID LPAR . parameter_list RPAR SCOLON local_var_declrs compound_statement SCOLON  (38)
	parameter_list : .  (45)

	ID  shift 56
	RPAR  reduce 45

	var_declr  goto 117
	var_init  goto 118
	id_list  goto 61
	parameter_list  goto 122
	var_declr_list  goto 120
	var_init_list  goto 121


state 69
	stmt_m : ID LPAR . expression_list RPAR  (100)
	value : ID LPAR . expression_list RPAR  (150)
	expression_list : .  (161)
